# pyzc

./: .gitignore  README.md  bootstrap.bat  pyproject.toml
src/zcpy/client/: __main__.py  game.py  game_board.py  menu.py  render.py
src/zcpy/common/: game_config.py  logging.py  settings.py
