[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Zone Control POC"
version = "0.0.1"
description = "Tool for building and deploying products"

authors = [
    { name = "lifeforce-dev", email = "lifeforce-dev@gmail.com" }
]

dependencies = [
    "pydantic == 2.8.2",
    "ruff>=0.8.0",
    "pygame >= 2.6.1",
    "PyDispatcher >= 2.0.0",
    "BloomEffect >= 1.0.0"
]

requires-python = ">=3.12"

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501"]
fix = true
include = ["*.py"]
extend-exclude = [
    "__pycache__/",
    "*.pyc",
    "*.pyo",
    ".venv",
    "dist"
]
target-version = "py312"